<resources>
    <string name="app_name">Qarejet</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="today">Today</string>
    <string name="add_note">Add note</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="account">Account</string>
    <string name="category">Category</string>
    <string name="note">Note</string>
    <string name="zero">0</string>
    <string name="add_transaction">Add Transaction</string>
    <string name="key_0">0</string>
    <string name="key_1">1</string>
    <string name="key_2">2</string>
    <string name="key_3">3</string>
    <string name="key_4">4</string>
    <string name="key_5">5</string>
    <string name="key_6">6</string>
    <string name="key_7">7</string>
    <string name="key_8">8</string>
    <string name="key_9">9</string>
    <string name="key_dot">.</string>
    <string name="hide_number_keyboard">Hide number keyboard</string>
    <string name="show_number_keyboard">Show number keyboard</string>
    <string name="remove_previous_number">Remove previous number</string>
    <string name="enter_amount">Please enter transaction amount</string>
    <string name="maximum_digits_reached">You have reached maximum of %d digits</string>
    <string name="new_transaction">New Transaction</string>

    <string name="account_cash">Cash</string>
    <string name="account_card">Card</string>
    <string name="category_expense_food">Food</string>
    <string name="category_expense_leisure">Leisure</string>
    <string name="category_expense_education">Education</string>
    <string name="category_expense_shopping">Shopping</string>
    <string name="category_expense_transport">Transportation</string>
    <string name="category_expense_bills">Bills/Utilities</string>local atm/
    <string name="category_expense_health">Health</string>
    <string name="category_expense_vehicle">Vehicle</string>
    <string name="category_expense_other">Other</string>
    <string name="category_income_salary">Salary</string>
    <string name="category_income_gift">Gift</string>
    <string name="category_income_rental">Rental Income</string>
    <string name="category_income_sale">Sale</string>
    <string name="category_income_interest">Interest/Dividend</string>
    <string name="category_income_other">Other</string>

    <string name="dashboard">Dashboard</string>
    <string name="charts">Charts</string>
    <string name="records">Records</string>
    <string name="settings">Settings</string>
    <string name="previous_month">Previous month</string>
    <string name="next_month">Next month</string>
    <string name="total_balance">Total Balance</string>

    <string-array name="months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

    <string name="cash_flow">Cash Flow</string>

    <string name="cash_flow_value">%.1f UZS</string>
    <string name="income_value">+%.1f income</string>
    <string name="expense_value">-%.1f expense</string>
    <string name="card_text">Card</string>
    <string name="cash_text">Cash</string>
    <string name="accounts_text">Accounts</string>
    <string name="budget_text">Budget</string>
    <string name="total_budget_value">Total: %.1f</string>
    <string name="progress_value">%.1f spent, %.1f left</string>
    <string name="last_transactions_text">Last transactions</string>

</resources>
