<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_description_black_24dp"
            android:title="@string/dashboard"/>

        <item android:id="@+id/nav_records"
            android:icon="@drawable/ic_credit_card_black_24dp"
            android:title="@string/records" />

        <item android:id="@+id/nav_charts"
            android:icon="@drawable/ic_label_outline_black_24dp"
            android:title="@string/charts" />

        <item android:id="@+id/nav_settings"
            android:icon="@drawable/ic_access_time_black_24dp"
            android:title="@string/settings" />

    </group>

</menu>
